[package]
name = "videah-net"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-html = "0.1.0"
dioxus = { version = "0.2.4", features = ["web", "fermi"] }
dyn-clonable = "0.9.0"
markdown = "0.3.0"
web-sys = { version = "0.3.57", features = ["Location", "Window", "Element", "Document", "HtmlElement"] }

[build-dependencies]
built = "0.5"
