[package]
name = "videah-net"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-html = "0.1.0"
dioxus = "0.3.1"
dioxus-web = "0.3.1"
dyn-clonable = "0.9.0"
markdown = "0.3.0"
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.57", features = ["Location", "Window", "Element", "Document", "HtmlElement", "DomTokenList", "HtmlAnchorElement"] }

[build-dependencies]
built = "0.6.0"

[profile.release]
lto = true
opt-level = "s"